--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 	<!-- WEBSITE VIDEO AND AUDIO -->
     <iframe src="silence.mp3" allow="autoplay" id="audio" style="display:none"></iframe> <!-- Forces audio on-->
 	<video class="fadeIn" autoplay muted loop disablePictureInPicture disableRemotePlayback id="bgVideo" playsinline>
-		<source src="bg2.mp4" type="video/mp4" />
+		<source src="wx.mp4" type="video/mp4" />
 	</video>
 
 	<style>
